fix(package): make package public

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "semantic-release": "semantic-release",
     "typedoc": "typedoc"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "release": {
     "plugins": [
       "@semantic-release/npm",
