--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
       {
         "pkgRoot": "/build"
       }
+    ],
+    "branches": [
+      "main"
     ]
   },
   "keywords": [
@@ -36,11 +39,9 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "@cypress/webpack-preprocessor": "^4.1.5",
     "@types/isomorphic-fetch": "0.0.35",
     "@types/jest": "^26.0.4",
     "cp": "^0.2.0",
-    "cypress": "^4.9.0",
     "jest": "^25.5.4",
     "path": "^0.12.7",
     "prettier": "^2.0.5",
