chore(ci): add lint action

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "package:lib": "npm run build && cp ./package.json build && cd build && npm version \"5.0.0\" && npm pack",
     "publish:lib": "npm run build && cd build && npm publish",
     "lint:fix": "npx prettier --write 'src/**/*.{ts,tsx,js,jsx,html,css,sass,less,json,yml,md,graphql}'",
-    "lint": "tslint -p tsconfig.json",
+    "lint": "npx prettier --check 'src/**/*.{ts,tsx,js,jsx,html,css,sass,less,json,yml,md,graphql}'",
     "test": "jest",
     "prepublishOnly": "cp -r ./build/* . && rm -rf ./build",
     "postpublish": "git clean -fd",
@@ -41,7 +41,6 @@
     "cp": "^0.2.0",
     "jest": "^25.5.4",
     "path": "^0.12.7",
-    "prettier": "^2.1.1",
     "rimraf": "^3.0.2",
     "semantic-release": "^17.1.1",
     "ts-jest": "^25.5.1",
