--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm ci
-      - run: npm run package:lib
+      - name: Install Dependencies
+        run: npm ci
+      - name: Check code style
+        run: npm run lint
+      - name: Build Package
+        run: npm run package:lib
         env:
           CI: true
