--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -16,6 +16,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Install Dependencies
         run: npm ci
+      - name: Check code style
+        run: npm run lint
       - name: Build Project
         run: npm run build
       - name: Semantic Release
