--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/isomorphic-fetch": "0.0.35",
     "@types/jest": "^26.0.15",
     "cp": "^0.2.0",
+    "dotenv": "^8.2.0",
     "jest": "^25.5.4",
     "path": "^0.12.7",
     "rimraf": "^3.0.2",
