chore(example): fixed example

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 SERVER_URL=https://server.com
-DEFAULT_COMPUTE_CONTEXT=SAS Studio compute context
+DEFAULT_COMPUTE_CONTEXT=SAS Job Execution compute context
