--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "publish:lib": "npm run build && cd build && npm publish",
     "lint:fix": "npx prettier --write 'src/**/*.{ts,tsx,js,jsx,html,css,sass,less,json,yml,md,graphql}'",
     "lint": "npx prettier --check 'src/**/*.{ts,tsx,js,jsx,html,css,sass,less,json,yml,md,graphql}'",
-    "test": "jest --coverage",
+    "test": "jest --silent --coverage",
     "prepublishOnly": "cp -r ./build/* . && rm -rf ./build",
     "postpublish": "git clean -fd",
     "semantic-release": "semantic-release",
@@ -36,19 +36,17 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "@types/isomorphic-fetch": "0.0.35",
     "@types/jest": "^26.0.20",
     "cp": "^0.2.0",
     "dotenv": "^8.2.0",
-    "jest": "^25.5.4",
+    "jest": "^26.6.3",
+    "jest-extended": "^0.11.5",
     "path": "^0.12.7",
     "rimraf": "^3.0.2",
     "semantic-release": "^17.3.1",
     "terser-webpack-plugin": "^4.2.3",
     "ts-jest": "^25.5.1",
     "ts-loader": "^8.0.14",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
     "typedoc": "^0.19.2",
     "typedoc-neo-theme": "^1.0.10",
     "typedoc-plugin-external-module-name": "^4.0.6",
@@ -60,8 +58,6 @@
   "dependencies": {
     "@sasjs/utils": "^2.0.2",
     "axios": "^0.21.1",
-    "es6-promise": "^4.2.8",
-    "form-data": "^3.0.0",
-    "isomorphic-fetch": "^2.2.1"
+    "form-data": "^3.0.0"
   }
 }
