--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
   "dependencies": {
     "@sasjs/utils": "^2.0.2",
     "axios": "^0.21.1",
-    "form-data": "^3.0.0"
+    "form-data": "^3.0.0",
     "https": "^1.0.0"
   }
 }
