--- a/sasjs-tests/.prettierrc
+++ b/sasjs-tests/.prettierrc
@@ -1,6 +1,6 @@
 {
   "trailingComma": "none",
   "tabWidth": 2,
-  "semi": true,
-  "singleQuote": false
+  "semi": false,
+  "singleQuote": true
 }
