--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dotenv": "^8.2.0",
     "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
+    "node-loader": "^2.0.0",
     "path": "^0.12.7",
     "rimraf": "^3.0.2",
     "semantic-release": "^17.4.2",
@@ -59,8 +60,13 @@
   "main": "index.js",
   "dependencies": {
     "@sasjs/utils": "^2.10.2",
+    "assert": "^2.0.0",
     "axios": "^0.21.1",
+    "buffer": "^6.0.3",
     "form-data": "^4.0.0",
-    "https": "^1.0.0"
+    "https": "^1.0.0",
+    "node-libcurl": "^2.3.3",
+    "stream": "0.0.2",
+    "stream-browserify": "^3.0.0"
   }
 }
