--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^26.0.22",
+    "@types/tough-cookie": "^4.0.0",
     "cp": "^0.2.0",
     "dotenv": "^8.2.0",
     "jest": "^26.6.3",
@@ -60,13 +61,12 @@
   "main": "index.js",
   "dependencies": {
     "@sasjs/utils": "^2.10.2",
-    "assert": "^2.0.0",
     "axios": "^0.21.1",
+    "axios-cookiejar-support": "^1.0.1",
     "buffer": "^6.0.3",
     "form-data": "^4.0.0",
     "https": "^1.0.0",
-    "node-libcurl": "^2.3.3",
-    "stream": "0.0.2",
-    "stream-browserify": "^3.0.0"
+    "tough-cookie": "^4.0.0",
+    "url": "^0.11.0"
   }
 }
