--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^26.0.22",
+    "@types/mime": "^2.0.3",
     "@types/tough-cookie": "^4.0.0",
     "cp": "^0.2.0",
     "dotenv": "^8.2.0",
     "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
+    "mime": "^2.5.2",
     "path": "^0.12.7",
     "rimraf": "^3.0.2",
     "semantic-release": "^17.4.2",
