--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jest": "^27.0.4",
     "jest-extended": "^0.11.5",
     "path": "^0.12.7",
+    "process": "^0.11.10",
     "rimraf": "^3.0.2",
     "semantic-release": "^17.4.3",
     "terser-webpack-plugin": "^5.1.3",
