chore(reviewers): add Sabir to list of devs, create separate QA list with Vlad

--- a/.github/reviewer-lottery.yml
+++ b/.github/reviewer-lottery.yml
@@ -7,3 +7,8 @@ groups:
       - saadjutt01
       - medjedovicm
       - allanbowe
+      - sabhas
+  - name: SASjs QA
+    reviewers: 1
+    usernames:
+      - VladislavParhomchik
