--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "axios-cookiejar-support": "^1.0.1",
     "form-data": "^4.0.0",
     "https": "^1.0.0",
+    "jwt-decode": "^3.1.2",
     "tough-cookie": "^4.0.0",
     "url": "^0.11.0"
   }
