--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jest": "^27.0.6",
     "jest-extended": "^0.11.5",
     "mime": "^2.5.2",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "path": "^0.12.7",
     "process": "^0.11.10",
     "rimraf": "^3.0.2",
@@ -64,12 +65,11 @@
   },
   "main": "index.js",
   "dependencies": {
-    "@sasjs/utils": "^2.21.0",
+    "@sasjs/utils": "^2.22.0",
     "axios": "^0.21.1",
     "axios-cookiejar-support": "^1.0.1",
     "form-data": "^4.0.0",
     "https": "^1.0.0",
-    "jwt-decode": "^3.1.2",
     "tough-cookie": "^4.0.0",
     "url": "^0.11.0"
   }
