--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/form-data": "^2.5.0",
     "@types/jest": "^26.0.23",
     "@types/mime": "^2.0.3",
     "@types/tough-cookie": "^4.0.0",
@@ -46,7 +48,6 @@
     "dotenv": "^10.0.0",
     "jest": "^27.0.6",
     "jest-extended": "^0.11.5",
-    "mime": "^2.5.2",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "path": "^0.12.7",
     "process": "^0.11.10",
