--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "postpublish": "git clean -fd",
     "semantic-release": "semantic-release",
     "typedoc": "typedoc",
-    "prepare": "git rev-parse --git-dir && git config core.hooksPath ./.git-hooks && git config core.autocrlf false || true"
+    "prepare": "git rev-parse --git-dir && git config core.hooksPath ./.git-hooks && git config core.autocrlf false || true",
+    "cypress": "cypress open"
   },
   "publishConfig": {
     "access": "public"
@@ -38,11 +39,13 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "@cypress/webpack-preprocessor": "^5.9.1",
     "@types/jest": "^26.0.23",
     "@types/mime": "^2.0.3",
     "@types/tough-cookie": "^4.0.0",
     "copyfiles": "^2.4.1",
     "cp": "^0.2.0",
+    "cypress": "^7.7.0",
     "dotenv": "^10.0.0",
     "jest": "^27.0.6",
     "jest-extended": "^0.11.5",
