--- a/.github/workflows/sasjs-tests.yml
+++ b/.github/workflows/sasjs-tests.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Deploy sasjs-tests sas9
         run: |
           replace-in-files --regex='serverType.*' --replacement='serverType:"SAS9",' ./public/config.json
-          npm run update:adapter && npm run build
+          npm run build
           scp -o stricthostkeychecking=no -r ./build/* ${{ secrets.DCGITLAB_DEPLOY_PATH_SAS9 }}
       
       - name: Run cypress on viya
