--- a/.github/workflows/sasjs-tests.yml
+++ b/.github/workflows/sasjs-tests.yml
@@ -61,19 +61,27 @@ jobs:
           cd sasjs-tests
           replace-in-files --regex='"@sasjs/adapter".*' --replacement='"@sasjs/adapter":"2.8.13",' ./package.json
           npm i
-          replace-in-files --regex='userName.*' --replacement='userName:"${{ secrets.SAS_USERNAME }}",' ./public/config.json
-          replace-in-files --regex='password.*' --replacement='password:"${{ secrets.SAS_PASSWORD }}",' ./public/config.json
+          replace-in-files --regex='"userName".*' --replacement='"userName":"${{ secrets.SAS_USERNAME }}",' ./public/config.json
+          replace-in-files --regex='"password".*' --replacement='"password":"${{ secrets.SAS_PASSWORD }}",' ./public/config.json
           replace-in-files --regex='serverType.*' --replacement='serverType:"SASVIYA",' ./public/config.json
           npm run update:adapter && npm run build
           scp -o stricthostkeychecking=no -r ./build/* ${{ secrets.DCGITLAB_DEPLOY_PATH_VIYA }}
-          replace-in-files --regex='serverType.*' --replacement='serverType:"SAS9",' ./public/config.json
+          replace-in-files --regex='"serverType".*' --replacement='"serverType":"SAS9",' ./public/config.json
           npm run build
           scp -o stricthostkeychecking=no -r ./build/* ${{ secrets.DCGITLAB_DEPLOY_PATH_SAS9 }}
-          
+
       - name: Run cypress on viya
-        run: ls
-      
+        run: |
+          replace-in-files --regex='"sasjsTestsUrl".*' --replacement='"sasjsTestsUrl":"${{ secrets.SASJS_TEST_URL_VIYA }}",' ./cypress.json
+          replace-in-files --regex='"username".*' --replacement='"username":"${{ secrets.SAS_USERNAME }}",' ./cypress.json
+          replace-in-files --regex='"password".*' --replacement='"password":"${{ secrets.SAS_PASSWORD }}",' ./cypress.json
+          npm run cy:run -- --spec "cypress/integration/sasjs.tests.ts"
+
       - name: Run cypress on sas9
-        run: ls
+        run: |
+          replace-in-files --regex='"sasjsTestsUrl".*' --replacement='"sasjsTestsUrl":"${{ secrets.SASJS_TEST_URL_SAS9 }}",' ./cypress.json
+          replace-in-files --regex='"username".*' --replacement='"username":"${{ secrets.SAS_USERNAME }}",' ./cypress.json
+          replace-in-files --regex='"password".*' --replacement='"password":"${{ secrets.SAS_PASSWORD }}",' ./cypress.json
+          npm run cy:run -- --spec "cypress/integration/sasjs.tests.ts"
         env:
           CI: true
