--- a/.github/workflows/sasjs-tests.yml
+++ b/.github/workflows/sasjs-tests.yml
@@ -63,7 +63,7 @@ jobs:
           npm i
           replace-in-files --regex='"userName".*' --replacement='"userName":"${{ secrets.SAS_USERNAME }}",' ./public/config.json
           replace-in-files --regex='"password".*' --replacement='"password":"${{ secrets.SAS_PASSWORD }}",' ./public/config.json
-          replace-in-files --regex='serverType.*' --replacement='serverType:"SASVIYA",' ./public/config.json
+          replace-in-files --regex='"serverType".*' --replacement='"serverType":"SASVIYA",' ./public/config.json
           npm run update:adapter && npm run build
           scp -o stricthostkeychecking=no -r ./build/* ${{ secrets.DCGITLAB_DEPLOY_PATH_VIYA }}
           replace-in-files --regex='"serverType".*' --replacement='"serverType":"SAS9",' ./public/config.json
