--- a/package.json
+++ b/package.json
@@ -73,5 +73,8 @@
     "form-data": "^4.0.0",
     "https": "^1.0.0",
     "tough-cookie": "^4.0.0"
+  },
+  "engines": {
+    "node": ">=15"
   }
 }
