--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "typedoc": "^0.21.4",
     "typedoc-neo-theme": "^1.1.1",
     "typedoc-plugin-external-module-name": "^4.0.6",
-    "typescript": "^4.3.5",
+    "typescript": "4.3.5",
     "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2"
   },
