--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
   "main": "index.js",
   "dependencies": {
     "@sasjs/utils": "^2.30.0",
-    "axios": "^0.21.4",
+    "axios": "0.21.1",
     "axios-cookiejar-support": "^1.0.1",
     "form-data": "^4.0.0",
     "https": "^1.0.0",
