--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "typedoc": "typedoc",
     "prepare": "git rev-parse --git-dir && git config core.hooksPath ./.git-hooks && git config core.autocrlf false || true"
   },
+  "browser":{
+    "child_process": false
+  },
   "publishConfig": {
     "access": "public"
   },
@@ -69,7 +72,7 @@
   },
   "main": "index.js",
   "dependencies": {
-    "@sasjs/utils": "^2.30.0",
+    "@sasjs/utils": "file:../utils/build/sasjs-utils-5.0.0.tgz",
     "axios": "^0.21.4",
     "axios-cookiejar-support": "^1.0.1",
     "form-data": "^4.0.0",
