--- a/package.json
+++ b/package.json
@@ -17,9 +17,6 @@
     "typedoc": "typedoc",
     "prepare": "git rev-parse --git-dir && git config core.hooksPath ./.git-hooks && git config core.autocrlf false || true"
   },
-  "browser":{
-    "child_process": false
-  },
   "publishConfig": {
     "access": "public"
   },
@@ -72,7 +69,7 @@
   },
   "main": "index.js",
   "dependencies": {
-    "@sasjs/utils": "file:../utils/build/sasjs-utils-5.0.0.tgz",
+    "@sasjs/utils": "^2.32.0",
     "axios": "^0.21.4",
     "axios-cookiejar-support": "^1.0.1",
     "form-data": "^4.0.0",
