--- a/package.json
+++ b/package.json
@@ -40,44 +40,44 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "@types/axios": "^0.14.0",
-    "@types/express": "^4.17.13",
-    "@types/form-data": "^2.5.0",
-    "@types/jest": "^27.0.2",
-    "@types/mime": "^2.0.3",
-    "@types/pem": "^1.9.6",
-    "@types/tough-cookie": "^4.0.1",
-    "copyfiles": "^2.4.1",
-    "cp": "^0.2.0",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "jest": "^27.2.0",
-    "jest-extended": "^0.11.5",
-    "node-polyfill-webpack-plugin": "^1.1.4",
-    "path": "^0.12.7",
-    "pem": "^1.14.4",
-    "process": "^0.11.10",
-    "rimraf": "^3.0.2",
-    "semantic-release": "^18.0.0",
-    "terser-webpack-plugin": "^5.2.4",
-    "ts-jest": "^27.0.3",
-    "ts-loader": "^9.2.6",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
+    "@types/axios": "0.14.0",
+    "@types/express": "4.17.13",
+    "@types/form-data": "2.5.0",
+    "@types/jest": "27.0.2",
+    "@types/mime": "2.0.3",
+    "@types/pem": "1.9.6",
+    "@types/tough-cookie": "4.0.1",
+    "copyfiles": "2.4.1",
+    "cp": "0.2.0",
+    "dotenv": "10.0.0",
+    "express": "4.17.1",
+    "jest": "27.2.0",
+    "jest-extended": "0.11.5",
+    "node-polyfill-webpack-plugin": "1.1.4",
+    "path": "0.12.7",
+    "pem": "1.14.4",
+    "process": "0.11.10",
+    "rimraf": "3.0.2",
+    "semantic-release": "18.0.0",
+    "terser-webpack-plugin": "5.2.4",
+    "ts-jest": "27.0.3",
+    "ts-loader": "9.2.6",
+    "tslint": "6.1.3",
+    "tslint-config-prettier": "1.18.0",
     "typedoc": "0.19.2",
-    "typedoc-neo-theme": "^1.1.1",
-    "typedoc-plugin-external-module-name": "^4.0.6",
+    "typedoc-neo-theme": "1.1.1",
+    "typedoc-plugin-external-module-name": "4.0.6",
     "typescript": "4.3.5",
-    "webpack": "^5.56.0",
-    "webpack-cli": "^4.7.2"
+    "webpack": "5.56.0",
+    "webpack-cli": "4.7.2"
   },
   "main": "index.js",
   "dependencies": {
-    "@sasjs/utils": "^2.32.0",
-    "axios": "^0.25.0",
-    "axios-cookiejar-support": "^1.0.1",
-    "form-data": "^4.0.0",
-    "https": "^1.0.0",
-    "tough-cookie": "^4.0.0"
+    "@sasjs/utils": "2.32.0",
+    "axios": "0.25.0",
+    "axios-cookiejar-support": "1.0.1",
+    "form-data": "4.0.0",
+    "https": "1.0.0",
+    "tough-cookie": "4.0.0"
   }
 }
