--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prepublishOnly": "cp -r ./build/* . && rm -rf ./build",
     "postpublish": "git clean -fd",
     "semantic-release": "semantic-release",
-    "typedoc": "typedoc",
+    "typedoc": "node createTSDocs",
     "prepare": "git rev-parse --git-dir && git config core.hooksPath ./.git-hooks && git config core.autocrlf false || true"
   },
   "publishConfig": {
@@ -65,8 +65,7 @@
     "tslint": "6.1.3",
     "tslint-config-prettier": "1.18.0",
     "typedoc": "0.22.11",
-    "typedoc-neo-theme": "1.1.1",
-    "typedoc-plugin-external-module-name": "4.0.6",
+    "typedoc-plugin-rename-defaults": "^0.4.0",
     "typescript": "4.5.4",
     "webpack": "5.66.0",
     "webpack-cli": "4.7.2"
