--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
   },
   "main": "index.js",
   "dependencies": {
-    "@sasjs/utils": "2.40.0",
+    "@sasjs/utils": "file:../utils/build/sasjs-utils-5.0.0.tgz",
     "axios": "0.26.0",
     "axios-cookiejar-support": "1.0.1",
     "form-data": "4.0.0",
