--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "@cypress/webpack-preprocessor": "^5.9.1",
-    "@types/form-data": "^2.5.0",
-    "cypress": "^7.7.0",
-    "typedoc-neo-theme": "^1.1.1",
-    "typedoc-plugin-external-module-name": "^4.0.6",
+    "@cypress/webpack-preprocessor": "5.9.1",
+    "@types/form-data": "2.5.0",
+    "cypress": "7.7.0",
+    "typedoc-neo-theme": "1.1.1",
+    "typedoc-plugin-external-module-name": "4.0.6",
     "@types/axios": "0.14.0",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.0",
