--- a/package.json
+++ b/package.json
@@ -43,11 +43,8 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "@cypress/webpack-preprocessor": "5.9.1",
     "@types/form-data": "2.5.0",
-    "cypress": "7.7.0",
-    "typedoc-neo-theme": "1.1.1",
-    "typedoc-plugin-external-module-name": "4.0.6",
+    "@cypress/webpack-preprocessor": "5.9.1",
     "@types/axios": "0.14.0",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.0",
@@ -56,6 +53,7 @@
     "@types/tough-cookie": "4.0.1",
     "copyfiles": "2.4.1",
     "cp": "0.2.0",
+    "cypress": "7.7.0",
     "dotenv": "16.0.0",
     "express": "4.17.3",
     "jest": "27.4.7",
@@ -63,6 +61,7 @@
     "node-polyfill-webpack-plugin": "1.1.4",
     "path": "0.12.7",
     "pem": "1.14.6",
+    "prettier": "2.6.2",
     "process": "0.11.10",
     "rimraf": "3.0.2",
     "semantic-release": "19.0.2",
@@ -72,6 +71,8 @@
     "tslint": "6.1.3",
     "tslint-config-prettier": "1.18.0",
     "typedoc": "0.22.11",
+    "typedoc-neo-theme": "1.1.1",
+    "typedoc-plugin-external-module-name": "4.0.6",
     "typedoc-plugin-rename-defaults": "0.4.0",
     "typescript": "4.5.5",
     "webpack": "5.69.0",
