--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -11,10 +11,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [lts/fermium]
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        
+
       - name: Install Dependencies
         run: npm ci
 
@@ -23,7 +28,7 @@ jobs:
 
       - name: Build Project
         run: npm run build
-        
+
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v2
         env:
