--- a/.github/workflows/generateDocs.yml
+++ b/.github/workflows/generateDocs.yml
@@ -26,6 +26,11 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
+      - name: Ensure docs folder exists
+        run: |
+          rm docs
+          mkdir docs
+
       - name: Generate Docs
         run: npm run typedoc
 
@@ -39,4 +44,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           BRANCH: gh-pages
+          FOLDER: docs
           MESSAGE: 'Docs: ({sha}) {msg}'
