chore: fix error if folder does not exist

--- a/.github/workflows/generateDocs.yml
+++ b/.github/workflows/generateDocs.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Ensure docs folder exists
         run: |
-          rm docs
+          rm -rf docs || true # avoid error if docs folder does not exist
           mkdir docs
 
       - name: Generate Docs
