--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "process": "0.11.10",
     "rimraf": "3.0.2",
     "semantic-release": "19.0.3",
-    "terser-webpack-plugin": "5.3.1",
+    "terser-webpack-plugin": "5.3.6",
     "ts-jest": "27.1.3",
     "ts-loader": "9.4.0",
     "tslint": "6.1.3",
@@ -72,7 +72,7 @@
     "typedoc": "0.23.24",
     "typedoc-plugin-rename-defaults": "0.6.4",
     "typescript": "4.8.3",
-    "webpack": "5.69.0",
+    "webpack": "5.75.0",
     "webpack-cli": "4.9.2"
   },
   "main": "index.js",
@@ -82,6 +82,6 @@
     "axios-cookiejar-support": "1.0.1",
     "form-data": "4.0.0",
     "https": "1.0.0",
-    "tough-cookie": "4.0.0"
+    "tough-cookie": "github:YuryShkoda/tough-cookie#without-psl"
   }
 }
