--- a/package.json
+++ b/package.json
@@ -82,6 +82,6 @@
     "axios-cookiejar-support": "1.0.1",
     "form-data": "4.0.0",
     "https": "1.0.0",
-    "tough-cookie": "github:YuryShkoda/tough-cookie#without-psl"
+    "tough-cookie": "4.0.0"
   }
 }
